--- a/welcome.html
+++ b/welcome.html
@@ -72,23 +72,20 @@
     <div id="welcomePage2">
       <h1>Welcome, Bob.</h1><br>
       <h2>Get Started:</h2><br>
-      <div class="container">
+      <div class="container" >
         <div class="row">
-          <div class="col-md-auto" style="clear:both">
-            <h1 style="float: left"><a href="search.html"><i class="bi bi-chevron-double-right"></a></i></h1>
-            <h4 style="float: right"><a href="search.html">Search for a school</a></h4>
+          <div class="col-md-auto">
+            <h3><a href="search.html"><i class="bi bi-chevron-double-right"></i>  Search for a school</a></h3>
           </div>
         </div>
         <div class="row">
-          <div class="col-md-auto" style="clear:both">
-            <h1 style="float: left"><a href="essays.html"><i class="bi bi-chevron-double-right"></a></i></h1>
-            <h4 style="float: right"><a href="essays.html">Start your personal statement</a></h4>
+          <div class="col-md-auto">
+            <h3><a href="essays.html"><i class="bi bi-chevron-double-right"></i>  Start your personal statement</a></h3>
           </div>
         </div>  
         <div class="row">
-          <div class="col-md-auto" style="clear:both">
-            <h1 style="float: left"><a href="tasks.html"><i class="bi bi-chevron-double-right"></a></i></h1>
-            <h4 style="float: right"><a href="tasks.html">Create a task</a></h4>
+          <div class="col-md-auto">
+            <h3><a href="tasks.html"><i class="bi bi-chevron-double-right"></i>  Create a task</a></h3>
           </div>
         </div>
     </div>
