removed hard coded registration vals, added interactive calendar, tasks

--- a/register.html
+++ b/register.html
@@ -21,19 +21,19 @@
       <table class="register">
         <tr class="register1">
           <td><label for="usrname">Username:</label></td>
-          <td><input type="text" value="Bob"required></td>
+          <td><input id="user" class="form-control" type="text" required></td>
         </tr>
         <tr class="register1">
           <td><label for="email">Email:</label></td>
-          <td><input type="email" value="Bob@tmail.com" id="email" required></td>
+          <td><input type="email" id="email" required></td>
         </tr>
         <tr class="register1">
           <td><label for="npwd">Password:</label></td>
-          <td><input type="password" value="password" id="npwd" required></td>
+          <td><input type="password" id="npwd" required></td>
         </tr>
         <tr class="register1">
           <td><label for="pwd">Confirm Password:</label></td>
-          <td><input type="password" value="password" id="pwd"></td>
+          <td><input type="password" id="pwd"></td>
         </tr>
         <tr class="register1">
           <td><button id="rbtn1">Register</button></td>
@@ -43,5 +43,14 @@
         </tr>
       </table>
     </form>
+    <script>
+      //USE HTML5 to store values
+      // var user = document.querySelector('#user').value;
+      // console.log(user);
+      // localStorage.setItem("username", user);
+      
+      // localStorage.email = $("#email").val(); do we really need to store these...
+      // localStorage.pwd = $("#npwd").val();
+    </script>
   </body>
 </html>
