--- a/welcome.html
+++ b/welcome.html
@@ -70,9 +70,9 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" crossorigin="anonymous"></script>
     <!--NAVBAR END-->
     <div id="welcomePage2">
-      <h1>Welcome, Bob.</h1><br>
+      <h1 id="h1"></h1><br>
       <h2>Get Started:</h2><br>
-      <div class="container" >
+      <div class="container">
         <div class="row">
           <div class="col-md-auto">
             <h3><a href="search.html"><i class="bi bi-chevron-double-right"></i>  Search for a school</a></h3>
@@ -89,5 +89,12 @@
           </div>
         </div>
     </div>
+    <script>
+      // document.getElementById("h1").innerHTML = "Welcome, "+localStorage.username +".";
+      // window.addEventListener('storage', function(event) {
+      //   document.getElementById("h1").innerHTML = "Welcome, "+ event.newValue+".";
+      // }, false);
+      // document.getElementById("h1").innerHTML = "Welcome, "+localStorage.username +".";
+    </script>
     </body>
 </html>
