--- a/welcome.html
+++ b/welcome.html
@@ -91,15 +91,8 @@
           </div>
         </div>
     </div>
-    <script>
-      // document.getElementById("h1").innerHTML = "Welcome, "+localStorage.username +".";
-      // window.addEventListener('storage', function(event) {
-      //   document.getElementById("h1").innerHTML = "Welcome, "+ event.newValue+".";
-      // }, false);
-      // document.getElementById("h1").innerHTML = "Welcome, "+localStorage.username +".";
-    </script>
     </body>
     <script>
-      document.getElementById("h1").innerHTML="Welcome"+" "+localStorage.getItem("username");
+      document.getElementById("h1").innerHTML="Welcome, "+localStorage.getItem("username")+".";
     </script>
 </html>
