added username in navbar too

--- a/register.html
+++ b/register.html
@@ -21,7 +21,7 @@
         <tr class="register1">
           <td><label for="usrname">Username:</label></td>
           <td><input type="text" id="usrname" value="" required></td>
-          <td><input id="user" class="form-control" type="text" required></td>
+          <!-- <td><input id="user" class="form-control" type="text" required></td> -->
         </tr>
         <tr class="register1">
           <td><label for="email">Email:</label></td>
