--- a/forms1.html
+++ b/forms1.html
@@ -58,10 +58,7 @@
                   <a class="dropdown-item" href="deadlines.html">Deadlines</a>
                   <a class="dropdown-item" href="tasks.html">Tasks</a>
                 </div>
-                
-                <li class="nav-item" style="padding-top: 0.6vw;">
-                  Hello, Bob. <i class="bi bi-person-circle"></i> <!-- placeholder user name -->
-                </li>
+                <li id="navBob" class="nav-item" style="padding-top: 0.6vw;"></li>
               </li>
           </ul>
         </div>
@@ -137,6 +134,8 @@
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" crossorigin="anonymous"></script>
-    <!--NAVBAR END-->
+    <script>
+      document.getElementById("navBob").innerHTML= "Hello, "+localStorage.getItem("username")+". <i class='bi bi-person-circle'></i>";
+    </script>
     </body>
 </html>
