--- a/login.html
+++ b/login.html
@@ -20,12 +20,16 @@
       <table class="table table-sm text-center login table-borderless">
         <tr>
           <!-- placeholders -->
-          <td><label for="usrname">Username:</label>
-            <input type="text" id="usrname" value="Bob" required></td> 
+          <td>
+            <label for="usrname">Username:</label>
+            <input type="text" id="usrname" required />
+          </td>
         </tr>
         <tr>
-          <td><label for="pwd">Password:</label>
-            <input type="password" id="pwd" value="password" required></td>
+          <td>
+            <label for="pwd">Password:</label>
+            <input type="password" id="pwd" required></td>
+          </td>
         </tr>
         <tr>
           <td>
@@ -40,5 +44,11 @@
         </tr>
       </table>
     </form>
+    <script>
+      document.getElementById("usrname").addEventListener("change",function(){
+        username=document.getElementById("usrname").value;
+        localStorage.setItem("username",username);
+      });
+    </script>
   </body>
 </html>
