--- a/tasks.html
+++ b/tasks.html
@@ -2,82 +2,129 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title></title> <!--ADD TITLE: AFMSS - (page name)-->
+    <title></title>
+    <!--ADD TITLE: AFMSS - (page name)-->
 
     <!-- Load style sheets -->
     <link
       rel="stylesheet"
       href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.css"
     />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.0/font/bootstrap-icons.css">
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.0/font/bootstrap-icons.css"
+    />
     <link rel="stylesheet" href="main.css" />
   </head>
 
-  <body> <!--GIVE ID-->
+  <body>
+    <!--GIVE ID-->
     <!--NAVBAR BEGIN-->
-    <h2 id="navhead" style="text-align: center; letter-spacing: 0.3em;">Application for Medical School Students</h2>
+    <h2 id="navhead" style="text-align: center; letter-spacing: 0.3em">
+      Application for Medical School Students
+    </h2>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div id="navbarNavDropdown">
-          <ul class="navbar-nav text-center">
-            <li class="nav-item">
-              <a class="nav-link" href="welcome.html">Home</a>
-            </li>
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="SchoolsDropdownNav" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Schools<span class="sr-only">(current)</span>
-              </a>
-              <div class="dropdown-menu" aria-labelledby="SchoolsDropdownNav">
-                <a class="dropdown-item" href="search.html">Search</a>
-                <a class="dropdown-item" href="list.html">List</a>
-              </div>
-            </li>
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="AppsDropdownNav" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                  Applications
-                </a>
-                <div class="dropdown-menu" aria-labelledby="AppsDropdownNav">
-                  <a class="dropdown-item" href="essays.html">Essays</a>
-                  <a class="dropdown-item" href="decisions.html">Decisions</a>
-                </div>
-              </li>
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="DocumentsDropdownNav" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                  Documents
-                </a>
-                <div class="dropdown-menu" aria-labelledby="DocumentsDropdownNav">
-                  <a class="dropdown-item" href="forms.html">Forms</a>
-                  <a class="dropdown-item" href="letters.html">Letters</a>
-                </div>
-              </li>
-              <li class="nav-item dropdown active">
-                <a class="nav-link dropdown-toggle" href="#" id="PlannerDropdownNav" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                  Planner
-                </a>
-                <div class="dropdown-menu" aria-labelledby="PlannerDropdownNav">
-                  <a class="dropdown-item" href="calendar.html">Calendar</a>
-                  <a class="dropdown-item" href="deadlines.html">Deadlines</a>
-                  <a class="dropdown-item" href="tasks.html">Tasks</a>
-                </div>
-              </li>
-              <li class="nav-item" style="padding-top: 0.6vw;">
-                Hello, Bob. <i class="bi bi-person-circle"></i> <!-- placeholder user name -->
-              </li>
-          </ul>
-        </div>
+      <div id="navbarNavDropdown">
+        <ul class="navbar-nav text-center">
+          <li class="nav-item">
+            <a class="nav-link" href="welcome.html">Home</a>
+          </li>
+          <li class="nav-item dropdown">
+            <a
+              class="nav-link dropdown-toggle"
+              href="#"
+              id="SchoolsDropdownNav"
+              data-toggle="dropdown"
+              aria-haspopup="true"
+              aria-expanded="false"
+            >
+              Schools<span class="sr-only">(current)</span>
+            </a>
+            <div class="dropdown-menu" aria-labelledby="SchoolsDropdownNav">
+              <a class="dropdown-item" href="search.html">Search</a>
+              <a class="dropdown-item" href="list.html">List</a>
+            </div>
+          </li>
+          <li class="nav-item dropdown">
+            <a
+              class="nav-link dropdown-toggle"
+              href="#"
+              id="AppsDropdownNav"
+              data-toggle="dropdown"
+              aria-haspopup="true"
+              aria-expanded="false"
+            >
+              Applications
+            </a>
+            <div class="dropdown-menu" aria-labelledby="AppsDropdownNav">
+              <a class="dropdown-item" href="essays.html">Essays</a>
+              <a class="dropdown-item" href="decisions.html">Decisions</a>
+            </div>
+          </li>
+          <li class="nav-item dropdown">
+            <a
+              class="nav-link dropdown-toggle"
+              href="#"
+              id="DocumentsDropdownNav"
+              data-toggle="dropdown"
+              aria-haspopup="true"
+              aria-expanded="false"
+            >
+              Documents
+            </a>
+            <div class="dropdown-menu" aria-labelledby="DocumentsDropdownNav">
+              <a class="dropdown-item" href="forms.html">Forms</a>
+              <a class="dropdown-item" href="letters.html">Letters</a>
+            </div>
+          </li>
+          <li class="nav-item dropdown active">
+            <a
+              class="nav-link dropdown-toggle"
+              href="#"
+              id="PlannerDropdownNav"
+              data-toggle="dropdown"
+              aria-haspopup="true"
+              aria-expanded="false"
+            >
+              Planner
+            </a>
+            <div class="dropdown-menu" aria-labelledby="PlannerDropdownNav">
+              <a class="dropdown-item" href="calendar.html">Calendar</a>
+              <a class="dropdown-item" href="deadlines.html">Deadlines</a>
+              <a class="dropdown-item" href="tasks.html">Tasks</a>
+            </div>
+          </li>
+          <li id="navBob" class="nav-item" style="padding-top: 0.6vw"></li>
+        </ul>
+      </div>
     </nav>
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" crossorigin="anonymous"></script>
+    <script
+      src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+      integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js"
+      integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js"
+      crossorigin="anonymous"
+    ></script>
     <!--NAVBAR END-->
 
     <!--tasks -->
-    <h1 class="head"> <br> Tasks </h1>   
+    <h1 class="head">
+      <br />
+      Tasks
+    </h1>
 
     <div class="tasks">
-      <div class="col"> 
+      <div class="col">
         <div class="col2">
-          <h2>  Interview Schedular</h2>
-          <h5> UID </h5>
+          <h2>Interview Schedular</h2>
+          <h5>UID</h5>
           <ul>
             <li>November 12 9:00 am</li>
             <li>November 12 10:00 am</li>
@@ -86,7 +133,7 @@
             <li>November 12 1:00 pm</li>
             <li>November 12 2:00 pm</li>
           </ul>
-          <h5> Jarvard University </h5>
+          <h5>Jarvard University</h5>
           <ul>
             <li>November 12 9:00 am</li>
             <li>November 12 10:00 am</li>
@@ -97,7 +144,7 @@
           </ul>
         </div>
         <div class="col2">
-          <h5> <br><br>Loyoler University </h5>
+          <h5><br /><br />Loyoler University</h5>
           <ul>
             <li>November 12 9:00 am</li>
             <li>November 12 10:00 am</li>
@@ -106,7 +153,7 @@
             <li>November 12 1:00 pm</li>
             <li>November 12 2:00 pm</li>
           </ul>
-          <h5> Drown University </h5>
+          <h5>Drown University</h5>
           <ul>
             <li>November 12 9:00 am</li>
             <li>November 12 10:00 am</li>
@@ -119,35 +166,51 @@
       </div>
       <div class="col">
         <h2>To-Do</h2>
-        <ul class="tas">
-        </ul>
+        <ul class="tas"></ul>
         <div class="input-group mb-3">
-          <input id="taskText" type="text" class="form-control" placeholder="Write a task..." aria-label="Add a task" aria-describedby="basic-addon2">
+          <input
+            id="taskText"
+            type="text"
+            class="form-control"
+            placeholder="Write a task..."
+            aria-label="Add a task"
+            aria-describedby="basic-addon2"
+          />
           <div class="input-group-append">
-            <button id="addTask" class="btn btn-outline-secondary" type="button">Add</button>
+            <button
+              id="addTask"
+              class="btn btn-outline-secondary"
+              type="button"
+            >
+              Add
+            </button>
           </div>
         </div>
       </div>
     </div>
     <script>
-      $("#addTask").click(function(){
+      $("#addTask").click(function () {
         var task = $("#taskText").val();
-        if(task != ""){
-          $(".tas").append('<li>'+task+'</li>');
+        if (task != "") {
+          $(".tas").append("<li>" + task + "</li>");
           $("#taskText").val("");
           $("#taskText").focus();
         }
       });
-      $(document).on('keypress',function(e) {
-        if(e.which == 13) {
+      $(document).on("keypress", function (e) {
+        if (e.which == 13) {
           var task = $("#taskText").val();
-          if(task != ""){
-            $(".tas").append('<li>'+task+'</li>');
+          if (task != "") {
+            $(".tas").append("<li>" + task + "</li>");
             $("#taskText").val("");
             $("#taskText").focus();
           }
         }
       });
+      document.getElementById("navBob").innerHTML =
+        "Hello, " +
+        localStorage.getItem("username") +
+        ". <i class='bi bi-person-circle'></i>";
     </script>
-    </body>
+  </body>
 </html>
