--- a/welcome.html
+++ b/welcome.html
@@ -59,9 +59,7 @@
                   <a class="dropdown-item" href="tasks.html">Tasks</a>
                 </div>
               </li>
-              <li class="nav-item" style="padding-top: 0.6vw;">
-                Hello, Bob. <i class="bi bi-person-circle"></i> <!-- placeholder user name -->
-              </li>
+              <li id="navBob" class="nav-item" style="padding-top: 0.6vw;"></li>
           </ul>
         </div>
     </nav>
@@ -94,5 +92,6 @@
     </body>
     <script>
       document.getElementById("h1").innerHTML="Welcome, "+localStorage.getItem("username")+".";
+      document.getElementById("navBob").innerHTML= "Hello, "+localStorage.getItem("username")+". <i class='bi bi-person-circle'></i>";
     </script>
 </html>
