--- a/search.html
+++ b/search.html
@@ -18,7 +18,6 @@
   </head>
 
   <body>
-    <!--GIVE ID-->
     <!--NAVBAR BEGIN-->
     <h2 id="navhead" style="text-align: center; letter-spacing: 0.3em">
       Application for Medical School Students
@@ -94,10 +93,7 @@
               <a class="dropdown-item" href="tasks.html">Tasks</a>
             </div>
           </li>
-          <li class="nav-item" style="padding-top: 0.6vw">
-            Hello, Bob. <i class="bi bi-person-circle"></i>
-            <!-- placeholder user name -->
-          </li>
+          <li id="navBob" class="nav-item" style="padding-top: 0.6vw;"></li>
         </ul>
       </div>
     </nav>
@@ -146,4 +142,7 @@
 
     <!--results  list end-->
   </body>
+  <script>
+    document.getElementById("navBob").innerHTML= "Hello, "+localStorage.getItem("username")+". <i class='bi bi-person-circle'></i>";
+  </script>
 </html>
