--- a/deadlines.html
+++ b/deadlines.html
@@ -59,9 +59,7 @@
                   <a class="dropdown-item" href="tasks.html">Tasks</a>
                 </div>
               </li>
-              <li class="nav-item" style="padding-top: 0.6vw;">
-                Hello, Bob. <i class="bi bi-person-circle"></i> <!-- placeholder user name -->
-              </li>
+              <li id="navBob" class="nav-item" style="padding-top: 0.6vw;"></li>
           </ul>
         </div>
     </nav>
@@ -81,7 +79,8 @@
       <li><b>November 29: </b>Eastwester University primary application </li>
       <li><b>November 30: </b>Depar University primary application </li>
     </ul>
-
-
+    <script>
+      document.getElementById("navBob").innerHTML= "Hello, "+localStorage.getItem("username")+". <i class='bi bi-person-circle'></i>";
+    </script>
     </body>
 </html>
