--- a/list.html
+++ b/list.html
@@ -59,9 +59,7 @@
                   <a class="dropdown-item" href="tasks.html">Tasks</a>
                 </div>
               </li>
-              <li class="nav-item" style="padding-top: 0.6vw;">
-                Hello, Bob. <i class="bi bi-person-circle"></i> <!-- placeholder user name -->
-              </li>
+              <li id="navBob" class="nav-item" style="padding-top: 0.6vw;"></li>
           </ul>
         </div>
     </nav>
@@ -92,7 +90,8 @@
         <li>University of Clorida</li>
       </ul>
     </div>
-
-
+    <script>
+      document.getElementById("navBob").innerHTML= "Hello, "+localStorage.getItem("username")+". <i class='bi bi-person-circle'></i>";
+    </script>
     </body>
 </html>
