--- a/welcome.html
+++ b/welcome.html
@@ -59,10 +59,7 @@
                   <a class="dropdown-item" href="tasks.html">Tasks</a>
                 </div>
               </li>
-              <li class="nav-item" id="li" style="padding-top: 0.6vw;">
-                 <!-- placeholder user name -->
-                 <!-- <i class="bi bi-person-circle"></i> -->
-              </li>
+              <li id="navBob" class="nav-item" style="padding-top: 0.6vw;"></li>
           </ul>
         </div>
     </nav>
@@ -95,10 +92,6 @@
     </body>
     <script>
       document.getElementById("h1").textContent="Welcome"+" "+localStorage.getItem("username");
-      document.getElementById("li").textContent="Hello"+" "+localStorage.getItem("username")+".";
-      i=document.createElement("i");
-      i.className="bi bi-person-circle";
-      document.getElementById("li").appendChild(i);
-      document.getElementById("h1").innerHTML="Welcome, "+localStorage.getItem("username")+".";
+      document.getElementById("navBob").innerHTML= "Hello, "+localStorage.getItem("username")+". <i class='bi bi-person-circle'></i>";
     </script>
 </html>
