--- a/search.html
+++ b/search.html
@@ -119,7 +119,8 @@
 
     </body>
     <h2 id="searchTitle" style="text-align: center">
-      Use the search bar below to search for a school:
+      Use the search bar below to search for a school: <br/>
+      IMPORTANT: Make sure your text is lowercase. 
     </h2>
     <script type="text/javascript">
       function resultsPageChoice() {
