changed background color and text

--- a/index.html
+++ b/index.html
@@ -17,8 +17,10 @@
   </head>
 
   <body id="welcomePage">
-    <h1 style="font-weight: bolder; color: rgb(190, 213, 252);">Welcome to AFMSS!</h1>
-    <p style="font-size: large; padding:30px;">
+    <h1 style="font-weight: bolder; color: rgb(133, 102, 245)">
+      Welcome to AFMSS!
+    </h1>
+    <p style="font-size: large; padding: 30px">
       The <b>Application for Medical School Students</b> is a one-stop shop for
       all your medical application needs. Our site is special—you don't handle
       the burden of organization yourself anymore. This is the only place you'll
@@ -26,7 +28,11 @@
       to save your applications.
     </p>
     <p style="font-size: 14px; font-weight: bold">UNLOCK FULL FUNCTIONALITY:</p>
-    <a class="btn" href="register.html" role="button" style="font-size: large;">REGISTER</a><br /><br />
-    <a class="btn" href="login.html" role="button" style="font-size: large;">LOGIN</a><br /><br />
+    <a class="btn" href="register.html" role="button" style="font-size: large"
+      >REGISTER</a
+    ><br /><br />
+    <a class="btn" href="login.html" role="button" style="font-size: large"
+      >LOGIN</a
+    ><br /><br />
   </body>
 </html>
