--- a/search.html
+++ b/search.html
@@ -119,7 +119,7 @@
 
     </body>
     <h2 id="searchTitle" style="text-align: center">
-      Use the search bar below to search for a school: <br/>
+      Use the search bar below to search for a school. <br/>
       IMPORTANT: Make sure your text is lowercase. 
     </h2>
     <script type="text/javascript">
