changed list page title to favorited schools, made each school a clickable that leads to its page

--- a/list.html
+++ b/list.html
@@ -117,25 +117,44 @@
     <!--header -->
     <h1 class="head">
       <br />
-      School List <br />
+      Favorited Schools <br />
     </h1>
 
     <!--results  list-->
     <div>
       <ul class="school-list">
-        <li>Awful College of Medicine</li>
-        <li>Depar University</li>
-        <li>Decent College of Medicine</li>
-        <li>Drown University</li>
-        <li>Eastwestern University</li>
-        <li>Jarvard University</li>
-        <li>Loyoler University</li>
-        <li>Partmouth University</li>
-        <li>Spectacular Medical School</li>
-        <li>UID</li>
-        <li>University of Bexas</li>
-        <li>University of Northern Dalifornia</li>
-        <li>University of Clorida</li>
+        <li> <a class="button-solid" href="results3.html">
+          <img
+            id="logo3"
+            src="schoollogo3.png"
+            alt="School Logo 2"
+            class="center"
+            style="width: 200px; height: 200px; margin-bottom: 20px"
+          />Depow University</a></li>
+            <li> <a class="button-solid" href="results4.html">
+              <img
+                id="logo4"
+                src="schoollogo4.png"
+                alt="School Logo 4"
+                class="center"
+                style="width: 200px; height: 200px; margin-bottom: 20px"
+              />Jarvard University</a></li>
+              <li><a class="button-solid" href="results.html">
+                <img
+                  id="logo1"
+                  src="schoollogo.png"
+                  alt="School Logo 1"
+                  class="center"
+                  style="width: 200px; height: 200px; margin-bottom: 20px"
+                />Loyoler University</a></li>
+                <li><a class="button-solid" href="results2.html">
+                  <img
+                    id="logo2"
+                    src="schoollogo2.png"
+                    alt="School Logo 2"
+                    class="center"
+                    style="width: 200px; height: 200px; margin-bottom: 20px"
+                  />UID</button></li>
       </ul>
     </div>
     <script>
