added a new school and corrosponding results  and essay page to favorited schools

--- a/list.html
+++ b/list.html
@@ -213,6 +213,14 @@
                     class="center"
                     style="width: 200px; height: 200px; margin-bottom: 20px"
                   />UID</button></li>
+                  <li><a class="button-solid" href="results5.html">
+                    <img
+                      id="logo5"
+                      src="schoollogo5.png"
+                      alt="School Logo 5"
+                      class="center"
+                      style="width: 200px; height: 200px; margin-bottom: 20px"
+                    />Awful College of Medicine</button></li>
       </ul>
     </div>
     <script>
