changed register page and login page

--- a/login.html
+++ b/login.html
@@ -42,6 +42,12 @@
             <a href="">Click here</a>
           </td>
         </tr>
+        <tr>
+          <td>
+            New User?
+            <a href="register.html">Register Here</a>
+          </td> 
+        </tr>
       </table>
     </form>
     <script>
