--- a/letter1.html
+++ b/letter1.html
@@ -98,53 +98,55 @@
         </ul>
       </div>
     </nav>
-    <table class="table table-borderless text-center">
-      <tr>
-        <td>
-          <h2>Letters of Recommendation</h2>
-        </td>
-      </tr>
-      <tr>
-        <td class="hf">School Name:Loyoler</td>
-      </tr>
-      <tr class="text-center">
-        <td>
-          1.<input type="file" value="Choose file" id="1" /><button
-            class="lbtn"
-            onclick="msg('1')"
-          >
-            Upload
-          </button>
-        </td>
-      </tr>
-      <tr class="text-center">
-        <td>
-          2.<input type="file" value="Choose file" id="2" /><button
-            class="lbtn"
-            onclick="msg('2')"
-          >
-            Upload
-          </button>
-        </td>
-      </tr>
-      <tr class="text-center">
-        <td>
-          3.<input type="file" value="Choose file" id="3" /><button
-            class="lbtn"
-            onclick="msg('3')"
-          >
-            Upload
-          </button>
-        </td>
-      </tr>
-      <tr>
-        <td>
-          <button class="lbtn" onclick="location.href='letter2.html'">
-            Submit
-          </button>
-        </td>
-      </tr>
-    </table>
+    <form action="letter2.html">
+      <table class="table table-borderless text-center">
+        <tr>
+          <td>
+            <h2>Letters of Recommendation</h2>
+          </td>
+        </tr>
+        <tr>
+          <td class="hf">School Name:Loyoler</td>
+        </tr>
+        <tr class="text-center">
+          <td>
+            1.<input type="file" value="Choose file" id="1" required/><button
+              class="lbtn"
+              onclick="msg('1')"
+            >
+              Upload
+            </button>
+          </td>
+        </tr>
+        <tr class="text-center">
+          <td>
+            2.<input type="file" value="Choose file" id="2" required /><button
+              class="lbtn"
+              onclick="msg('2')"
+            >
+              Upload
+            </button>
+          </td>
+        </tr>
+        <tr class="text-center">
+          <td>
+            3.<input type="file" value="Choose file" id="3" required/><button
+              class="lbtn"
+              onclick="msg('3')"
+            >
+              Upload
+            </button>
+          </td>
+        </tr>
+        <tr>
+          <td>
+            <button class="lbtn">
+              Submit
+            </button>
+          </td>
+        </tr>
+      </table>
+    </form>
     <script>
       function msg(id) {
         console.log(id);
