changed buttons and background colors

--- a/essays1.html
+++ b/essays1.html
@@ -110,35 +110,41 @@
           <td class="df">Personal Statement:</td>
           <td>
             <input type="file" value="Choose File" id="1" required />
-            <button class="lbtn">Upload</button>
+            <button class="btn btn-outline-primary">Upload</button>
           </td>
         </tr>
         <tr>
           <td class="df">Experience Description:</td>
           <td>
-            <input type="file" value="Choose File" id="2" required/>
-            <button class="lbtn" onclick="msg(2)">Upload</button>
+            <input type="file" value="Choose File" id="2" required />
+            <button class="btn btn-outline-primary" onclick="msg(2)">
+              Upload
+            </button>
           </td>
         </tr>
         <tr>
           <td class="df">MD-PHD Essay:</td>
           <td>
-            <input type="file" value="Choose File" id="3" required/>
-            <button class="lbtn" onclick="msg(3)">Upload</button>
+            <input type="file" value="Choose File" id="3" required />
+            <button class="btn btn-outline-primary" onclick="msg(3)">
+              Upload
+            </button>
           </td>
         </tr>
         <tr>
           <td class="df">Secondary Essay:</td>
           <td>
-            <input type="file" value="Choose File" id="4" required/>
-            <button class="lbtn" onclick="msg(4)">Upload</button>
+            <input type="file" value="Choose File" id="4" required />
+            <button class="btn btn-outline-primary" onclick="msg(4)">
+              Upload
+            </button>
           </td>
         </tr>
         <tr>
           <td></td>
           <td>
-            <button class="lbtn">
-            <!-- onclick="location.href='essays2.html'" -->
+            <button class="btn btn-outline-primary">
+              <!-- onclick="location.href='essays2.html'" -->
               Submit
             </button>
           </td>
@@ -156,9 +162,7 @@
         }
       }
     </script>
-    <script>
-      
-    </script>
+    <script></script>
     <script
       src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
       integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
