--- a/essays3.html
+++ b/essays3.html
@@ -109,28 +109,36 @@
         <td class="df">Personal Statement:</td>
         <td>
           <input type="file" value="Choose File" id="1" />
-          <button class="lbtn" onclick="msg(1)">Upload</button>
+          <button class="btn btn-outline-primary" onclick="msg(1)">
+            Upload
+          </button>
         </td>
       </tr>
       <tr>
         <td class="df">Experience Description:</td>
         <td>
           <input type="file" value="Choose File" id="2" />
-          <button class="lbtn" onclick="msg(2)">Upload</button>
+          <button class="btn btn-outline-primary" onclick="msg(2)">
+            Upload
+          </button>
         </td>
       </tr>
       <tr>
         <td class="df">MD-PHD Essay:</td>
         <td>
           <input type="file" value="Choose File" id="3" />
-          <button class="lbtn" onclick="msg(3)">Upload</button>
+          <button class="btn btn-outline-primary" onclick="msg(3)">
+            Upload
+          </button>
         </td>
       </tr>
       <tr>
         <td class="df">Secondary Essay:</td>
         <td>
           <input type="file" value="Choose File" id="4" />
-          <button class="lbtn" onclick="msg(4)">Upload</button>
+          <button class="btn btn-outline-primary" onclick="msg(4)">
+            Upload
+          </button>
         </td>
       </tr>
       <tr>
