--- a/forms1.html
+++ b/forms1.html
@@ -80,7 +80,7 @@
         </td>
         <td>
           <input type="file" value="Choose File" id="1">
-          <button class="lbtn" onclick="msg(1)">Upload</button>
+          <button class="btn btn-outline-primary" onclick="msg(1)">Upload</button>
         </td>
       </tr>
       <tr>
@@ -89,7 +89,7 @@
         </td>
         <td>
           <input type="file" value="Choose File" id="2">
-          <button class="lbtn" onclick="msg(2)">Upload</button>
+          <button class="btn btn-outline-primary" onclick="msg(2)">Upload</button>
         </td>
       </tr>
       <tr>
@@ -127,7 +127,7 @@
           
         </td>
         <td>
-          <button class="lbtn" onclick="location.href='forms2.html'">Submit</button>
+          <button class="btn btn-outline-primary" onclick="location.href='forms2.html'">Submit</button>
         </td>
       </tr>
     </table>
