--- a/letter1.html
+++ b/letter1.html
@@ -110,8 +110,8 @@
         </tr>
         <tr class="text-center">
           <td>
-            1.<input type="file" value="Choose file" id="1" required/><button
-              class="lbtn"
+            1.<input type="file" value="Choose file" id="1" required /><button
+              class="btn btn-outline-primary"
               onclick="msg('1')"
             >
               Upload
@@ -121,7 +121,7 @@
         <tr class="text-center">
           <td>
             2.<input type="file" value="Choose file" id="2" required /><button
-              class="lbtn"
+              class="btn btn-outline-primary"
               onclick="msg('2')"
             >
               Upload
@@ -130,8 +130,8 @@
         </tr>
         <tr class="text-center">
           <td>
-            3.<input type="file" value="Choose file" id="3" required/><button
-              class="lbtn"
+            3.<input type="file" value="Choose file" id="3" required /><button
+              class="btn btn-outline-primary"
               onclick="msg('3')"
             >
               Upload
@@ -140,9 +140,7 @@
         </tr>
         <tr>
           <td>
-            <button class="lbtn">
-              Submit
-            </button>
+            <button class="btn btn-outline-primary">Submit</button>
           </td>
         </tr>
       </table>
