--- a/decisions.html
+++ b/decisions.html
@@ -123,7 +123,7 @@
           <p style="font-size: 25px">UID wants to schedule an interview!</p>
           <br />
           <button type="button" class="btn btn-outline-primary">
-            Schedule Interview
+            <a style="color: black" href="tasks.html">Schedule Interview</a>
           </button>
         </li>
         <li id="box2">
@@ -167,10 +167,12 @@
           <p style="font-size: 25px">
             Jarvard has added you to their waitlist.
           </p>
-          <br />
-          <button type="button" class="btn btn-outline-primary">
-            Contact School
-          </button>
+          <p style="font-size: 25px">
+            If you would like more information, please contact
+            <a href="mailto: admissions@ghuneimmed.edu" target="_blank"
+              >admissions@ghuneimmed.edu</a
+            >.
+          </p>
         </li>
       </ul>
     </div>
